CSS scrollbar fix
Fix body horizontal scrollbar, when viewing UI at low resolution

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -31,7 +31,6 @@ body {
   font-family: sans-serif;
   height: 769px !important;
   overflow: auto;
-  overflow-x: hidden;
   background: #FFFFFF;
 }
 
